[project]
name = "rustfava"
dynamic = ["version"]
description = "Web interface for the accounting tool rustledger."
readme = "README.rst"
requires-python = ">=3.13"
license = "MIT"
authors = [
  {name = "Dominik Aumayr", email = "dominik@aumayr.name"}
]
maintainers = [
  {name = "Jakob Schnitzer", email = "mail@jakobschnitzer.de"}
]
keywords = ["rustfava", "fava", "beancount", "accounting", "rustledger"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "Babel>=2.11,<3",
    "Flask-Babel>=3,<5",
    "Flask>=2.2,<4",
    "Jinja2>=3,<4",
    "Werkzeug>=2.2,<4",
    "beangulp>=0.1",
    "cheroot>=8,<12",
    "click>=7,<9",
    "markdown2>=2.3.0,<3",
    "watchfiles>=0.20.0",
]

[project.urls]
Repository = "https://github.com/rustledger/rustfava"

[project.scripts]
rustfava = "rustfava.cli:main"

[project.optional-dependencies]
# Extra dependencies that are needed for the export to excel.
excel =[
    "pyexcel>=0.5",
    "pyexcel-ods3>=0.5",
    "pyexcel-xlsx>=0.5",
]
# Beancount compatibility - for legacy beancount plugin support and ingest hooks
beancount-compat = [
    "beancount>=2,<4",
]

[dependency-groups]
# Building the documentation website with sphinx.
docs = [
    "furo>=2024",
    "sphinx>=7",
    "sphinx-autodoc-typehints>=2",
]
# Type-checking with mypy or ty.
types = [
    "mypy>=1.14",
    "pytest>=8",
    "ty>=0.0.2",
    "typeguard>=4",
    "types-requests>=2.32.0.20250515",
    "types-setuptools>=67",
]
# Running pre-commit hooks.
pre-commit = [
    "pre-commit>=4",
]
# Dependencies for the contrib/scripts.py.
scripts = [
    "beanquery>=0.1,<0.3",
    "requests>=2",
]
# Dependencies for tests.
test = [
    "rustfava[excel]",
    "rustfava[beancount-compat]",
    "pytest-cov>=6",
    "pytest>=8",
    "setuptools>=67",
    "typeguard>=4",
]
# Stuff for the dev environment.
dev = [
    { include-group = "pre-commit" },
    { include-group = "test" },
    { include-group = "types" },
    "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=80", "setuptools_scm>=8", "Babel>=2.7,<3", "wheel"]
build-backend = "_build_backend"
backend-path = ["."]

[tool.uv]
python-preference = "system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.black]
line-length = 79
preview = true

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# There's some mismatches betweeen mypy and ty still
unused-ignore-comment = "ignore"

[tool.ty.src]
exclude = [
    "src/rustfava/core/ingest.py",
]

[tool.mypy]
mypy_path = "stubs"
strict = true
files = [
    "_build_backend.py",
    "contrib/scripts.py",
    "src/rustfava",
    "tests",
]

[[tool.mypy.overrides]]
module = ["flask_babel.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["markdown2.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
# filterwarnings = "ignore:.*locked_cached_property.*deprecated:DeprecationWarning"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "src/rustfava/beans/types.py",
    "src/rustfava/ext/auto_commit.py",
    # Rustledger integration - new code with many error handling paths
    "src/rustfava/rustledger/*",
    "src/rustfava/beans/create.py",
    "src/rustfava/beans/str.py",
    "src/rustfava/beans/abc.py",
    "src/rustfava/beans/funcs.py",
    "src/rustfava/core/conversion.py",
    "src/rustfava/core/query_shell.py",
    "src/rustfava/core/query.py",
    "src/rustfava/core/group_entries.py",
    "src/rustfava/core/number.py",
    "src/rustfava/util/excel.py",
 ]

[tool.coverage.paths]
source = [
    "src/rustfava/",
    ".tox/**/rustfava/",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "ALL",
]
extend-ignore = [
    "ANN401",   # allow `typing.Any`
    "C901",     # ignore mccabe complecity for now
    "CPY",      # no copyright notices in all files
    "COM812",   # better handled by formatter - avoid having trailing commas everywhere
    "DOC201",   # allow returns not to be documented for now
    "DOC501",   # allow raised exception not to be documented for now
    "DOC502",   # allow documented exceptions that are not explicitly raised
    "D105",     # allow magic methods to be undocumented
    "D107",     # allow __init__ to be undocumented - the class should be.
    "PD",       # pandas-related, has false-positives
    "PERF203",  # allow try-except in loop; zero-cost since Python 3.11
    "PLR2004",  # allow magic constants in comparisons
    "PLR6301",  # allow methods that do not use self
    "S404",     # This is a bit over-zelous on subprocess
    "S603",     # This is a bit over-zelous on subprocess.run
]

[tool.ruff.lint.flake8-type-checking]
strict = true  # always move type-only imports to TYPE_CHECKING-if blocks

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
known-first-party = ["rustfava"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 9

[tool.ruff.lint.per-file-ignores]
"contrib/**" = ["D", "INP"]
"docs/**" = ["D", "INP"]
"tests/conftest.py" = ["S101"]
"tests/test_*.py" = ["D", "PLC2701", "S101", "SLF001"]
"tests/data/import_config.py" = ["D", "INP", "S101"]
"tests/data/import_config_with_duplicate_names.py" = ["INP"]
"src/rustfava/core/filters.py" = ["D"]
# Lazy imports in CLI and request handlers (for conditionally used deps)
"src/rustfava/{__init__,application,cli}.py" = ["PLC0415"]

# pylint is not run as part of linting for Rustfava anymore but we keep these disables
# around for devs who might have pylint automatically run by their editors to avoid
# a ton of pylint warnings
# mypy with strict settings handles most of the whole-project analysis where pylint
# still shines - the simpler rules are mostly covered by ruff
[tool.pylint.'messages control']
disable = [
    "too-few-public-methods",
    "too-many-branches",              # is checked by ruff (PLR0912)
    "too-many-instance-attributes",
    "too-many-locals",                # is checked by ruff (PLR0914)
    "duplicate-code",
    "unused-argument",                # is checked by ruff (ARG001)
    "stop-iteration-return",
    "ungrouped-imports",
    "invalid-unary-operand-type",    # type-checking like, had false-positives
    "not-an-iterable",               # type-checking like, had false-positives
    "unsubscriptable-object",        # type-checking like, had false-positives
    "broad-except",                  # is checked by ruff (BLE)
    "too-many-return-statements",    # is checked by ruff (PLR0911)
    "too-many-arguments",            # is checked by ruff (PLR0913)
    "too-many-positional-arguments", # is checked by ruff (PLR0917)
    "redefined-builtin",             # is checked by ruff (A002)
    "protected-access",              # is checked by ruff (SLF001)
    "invalid-name",                  # is checked by ruff (N)
    "missing-docstring",             # is checked by ruff (D)
    "redefined-outer-name",          # false positives for pytest fixtures
]
