[metadata]
name = fava
version = attr: setuptools_scm.get_version
description = Web interface for the accounting tool Beancount.
long_description = file: README.rst
url = https://beancount.github.io/fava/
author = Dominik Aumayr
author_email = dominik@aumayr.name
maintainer = Jakob Schnitzer
maintainer_email = mail@jakobschnitzer.de
keywords = fava beancount accounting
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    Babel>=2.6.0
    cheroot
    Flask-Babel>=0.10.0
    Flask>=0.10.1
    Jinja2>=2.10
    beancount>=2.1.3
    click
    markdown2>=2.3.0
    ply
    simplejson>=2.3.0
    Werkzeug>=0.15.0
    pyreadline;platform_system=="Windows"

[options.entry_points]
console_scripts =
    fava = fava.cli:main

[options.extras_require]
excel =
    pyexcel>=0.2.2
    pyexcel-ods3>=0.1.1
    pyexcel-xls>=0.1.0
    pyexcel-xlsx>=0.1.0

[options.packages.find]
exclude =
    tests

[tool:pytest]
filterwarnings =
    ignore:.*PY_SSIZE_T_CLEAN will be required.*
