[metadata]
name = fava
version = attr: setuptools_scm.get_version
description = Web interface for the accounting tool Beancount.
long_description = file: README.rst
url = https://beancount.github.io/fava/
author = Dominik Aumayr
author_email = dominik@aumayr.name
maintainer = Jakob Schnitzer
maintainer_email = mail@jakobschnitzer.de
keywords = fava beancount accounting
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment

[options]
zip_safe = False
include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    Babel>=2.6.0,<3
    Flask-Babel>=1.0.0,<3
    Flask>=1.0,<3
    Jinja2>=2.10,<4
    Werkzeug>=1.0.0,<3
    beancount>=2.3.0,<3
    cheroot>=8,<9
    click>=7,<9
    markdown2>=2.3.0,<3
    ply
    simplejson>=3.2.0,<4
    typing-extensions; python_version < "3.8"

[options.entry_points]
console_scripts =
    fava = fava.cli:main

[options.extras_require]
excel =
    pyexcel>=0.2.2
    pyexcel-ods3>=0.1.1
    pyexcel-xls>=0.1.0
    pyexcel-xlsx>=0.1.0

[options.packages.find]
where = src

[mypy]
mypy_path = stubs
